@@ -1,3 +1,8 @@
+Sat Jan 22 11:24:43 CET 2005 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/xslt.c: internalize all text node content from
+	  stylesheet documents with the stylesheet dictionnary
+
 Fri Jan 21 12:04:18 HKT 2005 William Brack <wbrack@mmm.com.hk>
 
 	* tests/plugins/Makefile.am: Applied patch 11 (with small
